load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "httpapi.go",
        "kvstore.go",
        "listener.go",
        "main.go",
        "raft.go",
    ],
    importpath = "github.com/davidsmd/etcd/contrib/raftexample",
    visibility = ["//visibility:private"],
    deps = [
        "//etcdserver/stats:go_default_library",
        "//pkg/fileutil:go_default_library",
        "//pkg/types:go_default_library",
        "//raft:go_default_library",
        "//raft/raftpb:go_default_library",
        "//rafthttp:go_default_library",
        "//snap:go_default_library",
        "//wal:go_default_library",
        "//wal/walpb:go_default_library",
    ],
)

go_binary(
    name = "raftexample",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "kvstore_test.go",
        "raftexample_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//raft/raftpb:go_default_library"],
)
